test/must_fail/api/must_fail_v8_version.ref
error: v8_version() require exactly 0 arguments but 1 was given
  [must_fail_v8_version.ngjs:0:0] in <anonymous>()
    v8_version(1);
    ^

hint: function 'v8_version()' was called with 1 arguments
hint: argument #0 was 1 (number)

Stack trace (1 frames):
  [must_fail_v8_version.ngjs:0:0] in <anonymous>()
    v8_version(1);
    ^

exit(7)
