test/must_fail/api/must_fail_v8_version.ngjs
#!/usr/bin/env ngspicejs
// no arg needed
// linter: ngspicejs-lint
"use strict";

v8_version(1);
